Changes in 0.4.1:
=================
 - added DESTDIR for the final make install
   Thanks to Vincent Petry (PVince81@yahoo.fr) for the patch
 - fixed AllowMedic crashing on tutorial level 5
   Thanks to Annette Kalbow (annette@kalbow.com) for the patch.

Changes in 0.4:
===============
 - dynamites are now explicitely exploding (bomberman-style)
 - improved in-game music
 - added combo system (when completing networks in a row)
 - record hiscores even when quitting
 - medic cubes will also serve as cube converter if not used
   against a broken side-pipe.
 - regulated speed and number of moles from score.
 - fixed bug when blocks are overflowing.
 - speeding up the current block doesn't make all the other blocks
   fall faster, but all the other blocks are now falling faster by
   default.
 - higher score means faster rising floor, rising floors are now
   missing left and right blocks, avoiding self-triggering lines.
 - fixed a bug where the score would show up in tutorial mode when
   hitting pause.
 - support for Haiku/BeOS (thanks to Luc Schrijvers for the help)

Changes in 0.3:
===============
 - added moles crawling around the rezerwar that could damage the pipes
 - added 'medic' cubes to fix the pipes after mole damage
 - cooler main menu.
 - added support for direct fall (t*tris-style) with Up
 - added support for Hold (t*tris-style) with Tab on PC and B on Wii.
 - every scored points is now showed on the board and float/disappears.
 - fixed bug when added lines would merge with current block
   when too low.
 - fixing a pipe gives 500pts.
 - added 'l' as a validate key in menus (vi-key). 
 - added version number in title